# tw-validation-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-tests.yml
docs/: docs.md
src/tw_validation_python/: IDNumber.py  MobileBarcodeValidator.py  NationalIdentityNumberValidator.py  NationalPhoneNumberValidator.py
tests/: test_MobileBarcodeValidator.py  test_NationalIdentityNumberValidator.py  test_NationalPhoneNumberValidator.py  test_ValidIDNumber.py
