[project]
name = "tw-validation-python"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "a920604a", email = "a920604a@gmail.com"},
]
dependencies = [
    "pytest>=8.3.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
